--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>
-            <div><img src="src/logo.png" /></div>
+            <div></div>
             <div id="navLinks">
                 <div>about</div>
                 <div>compétences</div>
