--- a/index.html
+++ b/index.html
@@ -19,8 +19,14 @@
                 <div>contact</div>
             </div>
         </nav>
-        <h1 id="name">Floris Louërat</h1>
-        <p>développeur Web FullStack en formation chez 3W Academy</p>
+        <div id="divTitle">
+            <img src="src/fondClavier.jpg" id="imgProfil" />
+            <div id="presentation">
+                <h1 id="name">Floris Louërat</h1>
+                <p>développeur Web FullStack en formation chez 3W Academy</p>
+            </div>
+        </div>
+
     </header>
 
     <section id="about">
