--- a/index.html
+++ b/index.html
@@ -5,29 +5,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mon Portfolio</title>
+    <link rel="icon" href="src/f.png" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <header>
+        <img src="src/f.png" alt="logo F">
         <nav>
-            <div></div>
-            <div id="navLinks">
-                <div>about</div>
-                <div>compétences</div>
-                <div>projets</div>
-                <div>contact</div>
-            </div>
+
+            <li>about</li>
+            <li>compétences</li>
+            <li>projets</li>
+            <li>contact</li>
+
         </nav>
-        <div id="divTitle">
-            <img src="src/fondClavier.jpg" id="imgProfil" />
-            <div id="presentation">
-                <h1 id="name">Floris Louërat</h1>
-                <p>développeur Web FullStack en formation chez 3W Academy</p>
-            </div>
-        </div>
 
     </header>
+
+    <section id="divTitle">
+        <img src="src/fondClavier.jpg" id="imgProfil" />
+        <div id="presentation">
+            <h1 id="name">Floris Louërat</h1>
+            <p>développeur Web FullStack en formation</p>
+        </div>
+    </section>
 
     <section id="about">
         <h2>about</h2>
@@ -48,7 +50,8 @@
         <h2>contact</h2>
     </section>
     <footer>
-        <h2>footer</h2>
+        <p>Conçu et réalisé par Floris Louërat</p>
+        <p>©Copyright 2023 - Floris Louërat</p>
     </footer>
 </body>
 
