formulaire de contact

--- a/index.html
+++ b/index.html
@@ -54,45 +54,47 @@
 
     <section id="projets">
         <h2>projets</h2>
+
+        <div id="portfolio">
+
+        </div>
     </section>
 
     <section id="contact">
         <h2>contact</h2>
-        <section class="form">
-            <h2 id="formTitle">Contactez-moi!</h2>
 
-            <form id="form" aria-labelledby="formTitle" novalidate>
-                <div class="identite">
-                    <label for="name"></label>
-                    <input type="text" name="name" id="name" placeholder="Nom" required>
-                    <span id="name-error" class="error"></span>
+        <form id="form" aria-labelledby="formTitle" novalidate>
+            <div class="identite">
+                <label for="name"></label>
+                <input type="text" name="name" id="name" placeholder="Nom &ast;" required>
+                <span id="name-error"></span>
 
-                    <label for="firstName"></label>
-                    <input type="text" name="firstName" id="firstName" placeholder="Prénom" required>
-                    <span id="firstName-error" class="error"></span>
-                </div>
+                <label for="firstName"></label>
+                <input type="text" name="firstName" id="firstName" placeholder="Prénom &ast;" required>
+                <span id="firstName-error"></span>
+            </div>
 
-                <div class="coordonnees">
-                    <label for="email"></label>
-                    <input type="email" name="email" id="email" placeholder="Adresse e-mail" required>
-                    <span id="email-error" class="error"></span>
+            <div class="coordonnees">
+                <label for="email"></label>
+                <input type="email" name="email" id="email" placeholder="Adresse e-mail &ast;" required>
+                <span id="email-error"></span>
 
-                    <label for="phone"></label>
-                    <input type="text" name="phone" id="phone" placeholder="Téléphone" required>
-                    <span id="phone-error" class="error"></span>
-                </div>
+                <label for="phone"></label>
+                <input type="text" name="phone" id="phone" placeholder="Téléphone &ast;" required>
+                <span id="phone-error"></span>
+            </div>
 
-                <textarea rows="10" cols="40" id="textarea" minlength="1" maxlength="500"></textarea>
-                <button type="submit" id="send">Envoyer</button>
-            </form>
-        </section>
+            <textarea rows="10" cols="40" id="textarea" minlength="1" maxlength="500"></textarea>
+            <button type="submit" id="send">Envoyer</button>
+        </form>
+    </section>
 
-        <footer>
-            <p>Conçu et réalisé par Floris Louërat</p>
-            <p>©Copyright 2023 - Floris Louërat</p>
-        </footer>
+    <footer>
+        <p>Conçu et réalisé par Floris Louërat</p>
+        <p>©Copyright 2023 - Floris Louërat</p>
+    </footer>
 
-        <script src="scripts/form.js"></script>
+    <script src="scripts/form.js"></script>
 </body>
 
 </html>
