--- a/index.html
+++ b/index.html
@@ -13,12 +13,18 @@
     <header>
         <img src="src/f.png" alt="logo F">
         <nav>
-
-            <li>about</li>
-            <li>compétences</li>
-            <li>projets</li>
-            <li>contact</li>
-
+            <li class="nav-item">
+                <a href="#about" class="nav-link" title="Navigation vers about">about</a>
+            </li>
+            <li class="nav-item">
+                <a href="#tools" class="nav-link" title="Navigation vers compétences">compétences</a>
+            </li>
+            <li class="nav-item">
+                <a href="#projects" class="nav-link" title="Navigation vers projets">projets</a>
+            </li>
+            <li class="nav-item">
+                <a href="#contact" class="nav-link" title="Navigation vers contact">contact</a>
+            </li>
         </nav>
 
     </header>
@@ -30,9 +36,9 @@
             <p>développeur Web FullStack en formation</p>
         </div>
     </section>
-
+    <hr>
     <section id="about">
-        <h2>about</h2>
+        <h2>&Agrave; propos de moi...</h2>
         <div id='description'>
 
             Présentation : Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore, atque ut pariatur
@@ -47,19 +53,19 @@
         <div id="lol">lol ranking api</div>
 
     </section>
-
+    <hr>
     <section id="tools">
         <h2>tools</h2>
     </section>
-
-    <section id="projets">
+    <hr>
+    <section id="projects">
         <h2>projets</h2>
 
         <div id="portfolio">
 
         </div>
     </section>
-
+    <hr>
     <section id="contact">
         <h2>contact</h2>
 
@@ -96,6 +102,7 @@
         <p>©Copyright 2023 - Floris Louërat</p>
     </footer>
 </body>
+<script src="scripts/navBarScroll.js"></script>
 <script src="scripts/form.js"></script>
 
 </html>
