--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <img src="src/f.png" alt="logo F">
+        <img src="src/f.png" alt="logo">
         <nav>
             <li class="nav-item">
                 <a href="#about" class="nav-link" title="Navigation vers about">about</a>
@@ -30,7 +30,7 @@
     </header>
 
     <section id="divTitle">
-        <img src="src/fondClavier.jpg" id="imgProfil" />
+        <img src="src/fondClavier.jpg" alt="arrière-plan de clavier lumineux" id="imgProfil" />
         <div id="presentation">
             <h1 id="me">Floris Louërat</h1>
             <p>développeur Web FullStack en formation</p>
@@ -38,7 +38,7 @@
     </section>
     <hr>
     <section id="about">
-        <h2>&Agrave; propos de moi...</h2>
+        <h2>&Agrave; propos de moi</h2>
         <div id='description'>
 
             Présentation : Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore, atque ut pariatur
@@ -48,7 +48,9 @@
             laudantium labore.
 
             <p>passion & personnalité :</p>
+            jeu de go
         </div>
+
         <div id="spotify">musique préférée spotify api</div>
         <div id="lol">lol ranking api</div>
 
