--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <p>©Copyright 2023 - Floris Louërat</p>
     </footer>
 </body>
-<script src="scripts/navBarScroll.js"></script>
+<script src="scripts/navScroll.js"></script>
 <script src="scripts/form.js"></script>
 
 </html>
