refonte des couleurs

--- a/index.html
+++ b/index.html
@@ -37,36 +37,38 @@
         </div>
     </section>
     <hr>
-    <section id="about">
-        <h2>&Agrave; propos de moi</h2>
-        <div id='description'>
+    <main>
+        <section id="about">
+            <h2>&Agrave; propos de moi</h2>
+            <div id='description'>
 
-            Présentation : Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore, atque ut pariatur
-            voluptatibus
-            nulla beatae saepe quam autem blanditiis obcaecati. Dolorum possimus at officia libero, blanditiis ex
-            pariatur
-            laudantium labore.
+                Présentation : Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore, atque ut pariatur
+                voluptatibus
+                nulla beatae saepe quam autem blanditiis obcaecati. Dolorum possimus at officia libero, blanditiis ex
+                pariatur
+                laudantium labore.
 
-            <p>passion & personnalité :</p>
-            jeu de go
-        </div>
+                <p>passion & personnalité :</p>
+                jeu de go
+            </div>
 
-        <div id="spotify">musique préférée spotify api</div>
-        <div id="lol">lol ranking api</div>
+            <div id="spotify">musique préférée spotify api</div>
+            <div id="lol">lol ranking api</div>
 
-    </section>
-    <hr>
-    <section id="tools">
-        <h2>tools</h2>
-    </section>
-    <hr>
-    <section id="projects">
-        <h2>projets</h2>
+        </section>
+        <hr>
+        <section id="tools">
+            <h2>tools</h2>
+        </section>
+        <hr>
+        <section id="projects">
+            <h2>projets</h2>
 
-        <div id="portfolio">
+            <div id="portfolio">
 
-        </div>
-    </section>
+            </div>
+        </section>
+    </main>
     <hr>
     <section id="contact">
         <h2>contact</h2>
@@ -98,7 +100,6 @@
             <button type="submit" id="send">Envoyer</button>
         </form>
     </section>
-
     <footer>
         <p>Conçu et réalisé par Floris Louërat</p>
         <p>©Copyright 2023 - Floris Louërat</p>
