--- a/index.html
+++ b/index.html
@@ -43,10 +43,8 @@
             <div id='description'>
 
                 Présentation : Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore, atque ut pariatur
-                voluptatibus
-                nulla beatae saepe quam autem blanditiis obcaecati. Dolorum possimus at officia libero, blanditiis ex
-                pariatur
-                laudantium labore.
+                voluptatibus nulla beatae saepe quam autem blanditiis obcaecati. Dolorum possimus at officia libero,
+                blanditiis ex pariatur laudantium labore.
 
                 <p>passion & personnalité :</p>
                 jeu de go
