ajout de projets + css

--- a/index.html
+++ b/index.html
@@ -62,9 +62,7 @@
         <section id="projects">
             <h2>projets</h2>
 
-            <div id="portfolio">
-
-            </div>
+            <div id="portfolio"></div>
         </section>
     </main>
     <hr>
@@ -105,5 +103,6 @@
 </body>
 <script src="scripts/navScroll.js"></script>
 <script src="scripts/form.js"></script>
+<script src="scripts/projects.js"></script>
 
 </html>
