css nav + projets + tools

--- a/index.html
+++ b/index.html
@@ -57,6 +57,14 @@
         <hr>
         <section id="tools">
             <h2>tools</h2>
+            <div id="competencesDiv">
+
+            </div>
+            <div id="cvDiv">
+                <img src="src/cvImg.png" alt="cv" />
+                <a href="cv.pdf" download="cvFlorisLouërat.pdf">Télécharger le CV</a>
+            </div>
+
         </section>
         <hr>
         <section id="projects">
