--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
     </footer>
 </body>
 <script src="scripts/navScroll.js"></script>
+<script src="scripts/tools.js"></script>
 <script src="scripts/form.js"></script>
 <script src="scripts/projects.js"></script>
 
