--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <hr>
         <section id="projects">
             <h2>projets</h2>
-            <p>sélectionnez-en un pour plus d'informations</p>
+            <p>Cliquez pour plus d'informations</p>
             <div id="portfolio"></div>
         </section>
     </main>
