présentation breve debut

--- a/index.html
+++ b/index.html
@@ -42,12 +42,16 @@
             <h2>&Agrave; propos de moi</h2>
             <div id='description'>
 
-                Présentation : Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore, atque ut pariatur
-                voluptatibus nulla beatae saepe quam autem blanditiis obcaecati. Dolorum possimus at officia libero,
-                blanditiis ex pariatur laudantium labore.
+                Présentation : Je suis passionné par tout ce qui attrait à la logique (informatique, jeux de Go, sudoku
+                . . . ) que ce soit dans le jeux mais également dans la façon de penser.
+                Durant ma licence de Sciences fondamentales appliquées, j'ai beaucoup apprécié l'algorithmique et
+                l'informatique.</br>
+                Le domaine informatique m'a toujours attiré, ce qui m'a été confirmé avec un bilan de compétences que
+                j'ai souhaité initier récemment.
+
 
                 <p>passion & personnalité :</p>
-                jeu de go
+                jeu de go niveau 7kyu
             </div>
 
             <div id="spotify">musique préférée spotify api</div>
