--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <h2>&Agrave; propos de moi</h2>
             <div id='description'>
 
-                Présentation : Je suis passionné par tout ce qui attrait à la logique (informatique, jeux de Go, sudoku
+                Je suis passionné par tout ce qui attrait à la logique (informatique, jeux de Go, sudoku
                 . . . ) que ce soit dans le jeux mais également dans la façon de penser.
                 Durant ma licence de Sciences fondamentales appliquées, j'ai beaucoup apprécié l'algorithmique et
                 l'informatique.</br>
