--- a/index.html
+++ b/index.html
@@ -38,24 +38,37 @@
     </section>
     <hr>
     <main>
+        <h2>&Agrave; propos de moi</h2>
         <section id="about">
-            <h2>&Agrave; propos de moi</h2>
+
             <div id='description'>
 
-                Je suis passionné par tout ce qui attrait à la logique (informatique, jeux de Go, sudoku
-                . . . ) que ce soit dans le jeux mais également dans la façon de penser.
-                Durant ma licence de Sciences fondamentales appliquées, j'ai beaucoup apprécié l'algorithmique et
-                l'informatique.</br>
-                Le domaine informatique m'a toujours attiré, ce qui m'a été confirmé avec un bilan de compétences que
-                j'ai souhaité initier récemment.
-
-
+                <p>
+                    Bonjour! Je m'appelle Floris Louërat, et je suis actuellement Développeur Web FullStack en formation
+                    à la 3W Academy.
+                </p>
+                <p>
+                    Sortant de 5 années d'expérience en restauration, mon dernier poste était Chef de Cuisine /
+                    Sushiman.
+                </p>
+                <p>
+                    Durant ma licence de Sciences Fondamentales Appliquées à Chambéry, j'ai beaucoup apprécié
+                    l'algorithmique et l'informatique, ce qui en partie m'a poussé à me reconvertir aujourd'hui dans le
+                    développement web. Cette pensée m'a été confirmée avec un bilan de compétences que j'ai souhaité
+                    initier il y a quelques temps.
+                </p>
                 <p>passion & personnalité :</p>
-                jeu de go niveau 7kyu
+                <p>Je suis passionné par tout ce qui attrait à la logique (informatique, jeux de Go, . . . ) que ce soit
+                    dans le jeux ou même dans la façon de penser.</p>
+
+                <p>jeu de go niveau 7kyu</p>
+                <div id="descDivs">
+                    <div id="spotify">musique préférée spotify api</div>
+                    <div id="lol">lol ranking api</div>
+                </div>
             </div>
 
-            <div id="spotify">musique préférée spotify api</div>
-            <div id="lol">lol ranking api</div>
+
 
         </section>
         <hr>
