--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mon Portfolio</title>
+    <title>Floris Louërat</title>
     <link rel="icon" href="src/f.png" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
 </head>
