- form + dev x + socials

--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
                 <a href="#contact" class="nav-link" title="Navigation vers contact">contact</a>
             </li>
         </nav>
-
     </header>
 
     <section id="divTitle">
@@ -68,8 +67,6 @@
                 </div>
             </div>
 
-
-
         </section>
         <hr>
         <section id="tools">
@@ -89,38 +86,19 @@
             <p>Cliquez pour plus d'informations</p>
             <div id="portfolio"></div>
         </section>
+
+        <hr>
+        <section id="contact">
+            <h2>contact</h2>
+            <p>N'hésitez pas à me contacter via mes réseaux, je suis ouvert à toute discussion! </p>
+            <div id="socials">
+                <a href="mailto:floris.louerat@gmail.com?subject=[from: Portfolio]"><img src="src/mail.png"></a>
+                <a href="#"><img src="src/linkedIn.png"></a>
+                <a href="#"><img src="src/facebook.png"></a>
+                <a href="#"><img src="src/github.png"></a>
+            </div>
+        </section>
     </main>
-    <hr>
-    <section id="contact">
-        <h2>contact</h2>
-
-        <form id="form" aria-labelledby="formTitle" novalidate>
-            <div class="identite">
-                <label for="name"></label>
-                <input type="text" name="name" id="name" placeholder="Nom &ast;" required autocomplete="family-name">
-                <span id="name-error"></span>
-
-                <label for="firstName"></label>
-                <input type="text" name="firstName" id="firstName" placeholder="Prénom &ast;" required
-                    autocomplete="given-name">
-                <span id="firstName-error"></span>
-            </div>
-
-            <div class="coordonnees">
-                <label for="email"></label>
-                <input type="email" name="email" id="email" placeholder="Adresse e-mail &ast;" required
-                    autocomplete="email">
-                <span id="email-error"></span>
-
-                <label for="phone"></label>
-                <input type="text" name="phone" id="phone" placeholder="Téléphone &ast;" required autocomplete="tel">
-                <span id="phone-error"></span>
-            </div>
-
-            <textarea rows="10" cols="40" id="textarea" minlength="1" maxlength="500"></textarea>
-            <button type="submit" id="send">Envoyer</button>
-        </form>
-    </section>
     <footer>
         <p>Conçu et réalisé par Floris Louërat</p>
         <p>©Copyright 2023 - Floris Louërat</p>
