--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
             <h2>contact</h2>
             <p>N'hésitez pas à me contacter via mes réseaux, je suis ouvert à toute discussion! </p>
             <div id="socials">
-                <a href="mailto:floris.louerat@gmail.com?subject=[from: Portfolio]"><img src="src/mail.png"></a>
-                <a href="#"><img src="src/linkedIn.png"></a>
-                <a href="#"><img src="src/facebook.png"></a>
-                <a href="#"><img src="src/github.png"></a>
+                <a href="mailto:floris.louerat@gmail.com?subject=[from: Portfolio]"><img src="src/socials/mail.png"></a>
+                <a href="#"><img src="src/socials/linkedIn.png"></a>
+                <a href="#"><img src="src/socials/facebook.png"></a>
+                <a href="#"><img src="src/socials/github.png"></a>
             </div>
         </section>
     </main>
