- styles nav - fleche

--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
         </section>
         <hr>
         <section id="tools">
-            <h2>tools</h2>
+            <h2>Compétences</h2>
+            <p>(En constante évolution)</p>
             <div id="competencesDiv">
 
             </div>
@@ -83,7 +84,7 @@
         <hr>
         <section id="projects">
             <h2>projets</h2>
-            <p>Cliquez pour plus d'informations</p>
+            <p>Cliquez pour voir le projet</p>
             <div id="portfolio"></div>
         </section>
 
@@ -106,7 +107,6 @@
 </body>
 <script src="scripts/navScroll.js"></script>
 <script src="scripts/tools.js"></script>
-<script src="scripts/form.js"></script>
 <script src="scripts/projects.js"></script>
 
 </html>
