--- a/index.html
+++ b/index.html
@@ -48,22 +48,27 @@
                 </p>
                 <p>
                     Sortant de 5 années d'expérience en restauration, mon dernier poste était Chef de Cuisine /
-                    Sushiman.
+                    Sushiman. Ce rôle m'aura notament appris à superviser des équipes, établir un planning du personnel
+                    et être rigoureux dans mon travail, des qualités qui je trouve, sont essentielles dans tout autre
+                    domaine, même dans la vie privée.
                 </p>
                 <p>
                     Durant ma licence de Sciences Fondamentales Appliquées à Chambéry, j'ai beaucoup apprécié
-                    l'algorithmique et l'informatique, ce qui en partie m'a poussé à me reconvertir aujourd'hui dans le
+                    l'algorithmique et l'informatique, ce qui m'a en partie poussé à me reconvertir aujourd'hui dans le
                     développement web. Cette pensée m'a été confirmée avec un bilan de compétences que j'ai souhaité
                     initier il y a quelques temps.
                 </p>
-                <p>passion & personnalité :</p>
-                <p>Je suis passionné par tout ce qui attrait à la logique (informatique, jeux de Go, . . . ) que ce soit
-                    dans le jeux ou même dans la façon de penser.</p>
+                <p>Passion & personnalité :</p>
+                <p>Grand joueur dans l'âme, je suis passionné par tout ce qui attrait à la logique (informatique, jeu
+                    de Go, sudoku, . . . ) que ce soit dans les jeux ou même dans la façon de penser.</p>
 
-                <p>jeu de go niveau 7kyu</p>
+
                 <div id="descDivs">
-                    <div id="spotify">musique préférée spotify api</div>
-                    <div id="lol">lol ranking api</div>
+                    <div id="jeu de go">
+                        <p>(jeu de go niveau 6kyu)</p>
+                    </div>
+                    <div id="spotify">musique préférée spotify</div>
+                    <div id="lol">lol ranking</div>
                 </div>
             </div>
 
@@ -94,9 +99,10 @@
             <p>N'hésitez pas à me contacter via mes réseaux, je suis ouvert à toute discussion! </p>
             <div id="socials">
                 <a href="mailto:floris.louerat@gmail.com?subject=[from: Portfolio]"><img src="src/socials/mail.png"></a>
-                <a href="#"><img src="src/socials/linkedIn.png"></a>
-                <a href="#"><img src="src/socials/facebook.png"></a>
-                <a href="#"><img src="src/socials/github.png"></a>
+                <a href="https://www.linkedin.com/in/floris-lou%C3%ABrat-758694129/"><img
+                        src="src/socials/linkedIn.png"></a>
+                <a href="https://www.facebook.com/floris.louerat"><img src="src/socials/facebook.png"></a>
+                <a href="https://github.com/Flozerty"><img src="src/socials/github.png"></a>
             </div>
         </section>
     </main>
