--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <main>
         <h2>&Agrave; propos de moi</h2>
         <section id="about">
-
+            <img src="imgMe" alt="photo de Floris" />
             <div id='description'>
 
                 <p>
@@ -48,24 +48,22 @@
                 </p>
                 <p>
                     Sortant de 5 années d'expérience en restauration, mon dernier poste était Chef de Cuisine /
-                    Sushiman. Ce rôle m'aura notament appris à superviser des équipes, établir un planning du personnel
-                    et être rigoureux dans mon travail, des qualités qui je trouve, sont essentielles dans tout autre
-                    domaine, même dans la vie privée.
+                    Sushiman. Ce rôle m'aura notament appris à superviser des équipes et être rigoureux dans mon
+                    travail, des qualités qui je trouve, sont essentielles dans tout autre domaine, même dans la vie
+                    privée.
                 </p>
                 <p>
-                    Durant ma licence de Sciences Fondamentales Appliquées à Chambéry, j'ai beaucoup apprécié
-                    l'algorithmique et l'informatique, ce qui m'a en partie poussé à me reconvertir aujourd'hui dans le
-                    développement web. Cette pensée m'a été confirmée avec un bilan de compétences que j'ai souhaité
-                    initier il y a quelques temps.
+                    Durant ma licence de SFA, j'ai beaucoup apprécié l'algorithmique et l'informatique, ce qui m'a en
+                    partie poussé à me reconvertir aujourd'hui dans le développement web. Cette pensée m'a été confirmée
+                    avec un bilan de compétences que j'ai souhaité initier il y a quelques temps.
                 </p>
-                <p>Passion & personnalité :</p>
-                <p>Grand joueur dans l'âme, je suis passionné par tout ce qui attrait à la logique (informatique, jeu
+                <p>Passion & Personnalité :</p>
+                <p>Grand joueur dans l'âme, passionné par tout ce qui attrait à la logique (informatique, jeu
                     de Go, sudoku, . . . ) que ce soit dans les jeux ou même dans la façon de penser.</p>
 
-
                 <div id="descDivs">
-                    <div id="jeu de go">
-                        <p>(jeu de go niveau 6kyu)</p>
+                    <div id="goGame">
+                        <p>(jeu de go : niveau 6kyu)</p>
                     </div>
                     <div id="spotify">musique préférée spotify</div>
                     <div id="lol">lol ranking</div>
