--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Portfolio de développeur FullStack Junior : Floris Louërat">
     <title>Floris Louërat</title>
-    <link rel="icon" href="src/f.png" type="image/x-icon">
+    <link rel="icon" href="src/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -13,18 +14,20 @@
     <header>
         <img src="src/f.png" alt="logo">
         <nav>
-            <li class="nav-item">
+
+            <div class="nav-item">
                 <a href="#about" class="nav-link" title="Navigation vers about">about</a>
-            </li>
-            <li class="nav-item">
+            </div>
+            <div class="nav-item">
                 <a href="#tools" class="nav-link" title="Navigation vers compétences">compétences</a>
-            </li>
-            <li class="nav-item">
+            </div>
+            <div class="nav-item">
                 <a href="#projects" class="nav-link" title="Navigation vers projets">projets</a>
-            </li>
-            <li class="nav-item">
+            </div>
+            <div class="nav-item">
                 <a href="#contact" class="nav-link" title="Navigation vers contact">contact</a>
-            </li>
+            </div>
+
         </nav>
     </header>
 
@@ -32,14 +35,14 @@
         <img src="src/fondClavier.jpg" alt="arrière-plan de clavier lumineux" id="imgProfil" />
         <div id="presentation">
             <h1 id="me">Floris Louërat</h1>
-            <p>développeur Web FullStack en formation</p>
+            <p>développeur Web FullStack Junior</p>
         </div>
     </section>
     <hr>
     <main>
         <h2>&Agrave; propos de moi</h2>
         <section id="about">
-            <img src="imgMe" alt="photo de Floris" />
+            <img src="imgMe" alt="photo de Floris" id="imgMe" />
             <div id='description'>
 
                 <p>
@@ -47,17 +50,11 @@
                     à la 3W Academy.
                 </p>
                 <p>
-                    Sortant de 5 années d'expérience en restauration, mon dernier poste était Chef de Cuisine /
-                    Sushiman. Ce rôle m'aura notament appris à superviser des équipes et être rigoureux dans mon
-                    travail, des qualités qui je trouve, sont essentielles dans tout autre domaine, même dans la vie
-                    privée.
+                    Ancien chef de cuisine, ma transition vers le développement web a été motivée par ma passion pour
+                    l'informatique, la logique et l'algorithmique.
                 </p>
-                <p>
-                    Durant ma licence de SFA, j'ai beaucoup apprécié l'algorithmique et l'informatique, ce qui m'a en
-                    partie poussé à me reconvertir aujourd'hui dans le développement web. Cette pensée m'a été confirmée
-                    avec un bilan de compétences que j'ai souhaité initier il y a quelques temps.
-                </p>
-                <p>Passion & Personnalité :</p>
+
+                <h4>Passion & Personnalité :</h4>
                 <p>Grand joueur dans l'âme, passionné par tout ce qui attrait à la logique (informatique, jeu
                     de Go, sudoku, . . . ) que ce soit dans les jeux ou même dans la façon de penser.</p>
 
@@ -79,7 +76,7 @@
 
             </div>
             <div id="cvDiv">
-                <img src="src/cvImg.png" alt="cv" />
+                <img src="src/cvImg.png" alt="cv de Floris" />
                 <a href="cv.pdf" download="cvFlorisLouërat.pdf">Télécharger le CV</a>
             </div>
 
@@ -96,11 +93,13 @@
             <h2>contact</h2>
             <p>N'hésitez pas à me contacter via mes réseaux, je suis ouvert à toute discussion! </p>
             <div id="socials">
-                <a href="mailto:floris.louerat@gmail.com?subject=[from: Portfolio]"><img src="src/socials/mail.png"></a>
-                <a href="https://www.linkedin.com/in/floris-lou%C3%ABrat-758694129/"><img
-                        src="src/socials/linkedIn.png"></a>
-                <a href="https://www.facebook.com/floris.louerat"><img src="src/socials/facebook.png"></a>
-                <a href="https://github.com/Flozerty"><img src="src/socials/github.png"></a>
+                <a href="mailto:floris.louerat@gmail.com?subject=[from: Portfolio]"><img src="src/socials/mail.png"
+                        alt="send me a mail" /></a>
+                <a href="https://www.linkedin.com/in/floris-lou%C3%ABrat-758694129/"><img src="src/socials/linkedIn.png"
+                        alt="link to my linkedIn" /></a>
+                <a href="https://www.facebook.com/floris.louerat"><img src="src/socials/facebook.png"
+                        alt="link to my facebook" /></a>
+                <a href="https://github.com/Flozerty"><img src="src/socials/github.png" alt="link to my github" /></a>
             </div>
         </section>
     </main>
