--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <hr>
         <section id="contact">
             <h2>contact</h2>
-            <p>N'hésitez pas à me contacter via mes réseaux, je suis ouvert à toute discussion! </p>
+            <p>N'hésitez pas à me contacter via mes réseaux! </p>
             <div id="socials">
                 <a href="mailto:floris.louerat@gmail.com?subject=[from: Portfolio]"><img src="src/socials/mail.png"
                         alt="send me a mail" /></a>
