--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                     à la 3W Academy.
                 </p>
                 <p>
-                    Ancien chef de cuisine, ma transition vers le développement web a été motivée par ma passion pour
-                    l'informatique, la logique et l'algorithmique.
+                    Ancien chef de cuisine / sushiman, ma transition vers le développement web a été motivée par ma
+                    passion pour l'informatique, la logique et l'algorithmique.
                 </p>
 
                 <h4>Passion & Personnalité :</h4>
