--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <hr>
         <section id="tools">
             <h2>Compétences</h2>
-            <p>(En constante évolution)</p>
+            <p>En constante évolution</p>
             <div id="competencesDiv">
 
             </div>
