--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
                     passion pour l'informatique, la logique et l'algorithmique.
                 </p>
 
-                <h4>Passion & Personnalité :</h4>
+                <p class="subtitle">Passion & Personnalité</p>
                 <p>Grand joueur dans l'âme, passionné par tout ce qui attrait à la logique (informatique, jeu
                     de Go, sudoku, . . . ) que ce soit dans les jeux ou même dans la façon de penser.</p>
 
                 <div id="descDivs">
                     <div id="goGame">
-                        <p>(jeu de go : niveau 6kyu)</p>
+                        <p>(Go : niveau 6kyu)</p>
                     </div>
                     <div id="spotify">musique préférée spotify</div>
                     <div id="lol">lol ranking</div>
