--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <main>
 
         <section id="about">
-            <img src="imgMe" alt="photo de Floris" id="imgMe" />
+            <img src="imgMe" alt="photo de moi (ou pas)" id="imgMe" />
             <div id='description'>
                 <h2>&Agrave; propos de moi</h2>
                 <p>
@@ -55,12 +55,12 @@
                 </p>
 
                 <p class="subtitle">Passion & Personnalité</p>
-                <p>Grand joueur dans l'âme, passionné par tout ce qui attrait à la logique (informatique, jeu
-                    de Go, sudoku, . . . ) que ce soit dans les jeux ou même dans la façon de penser.</p>
+                <p>Grand joueur dans l'âme, passionné par tout ce qui attrait à la logique, que ce soit dans les jeux ou
+                    même dans la façon de penser.</p>
 
                 <div id="descDivs">
                     <div id="goGame">
-                        <p>(Go : niveau 6kyu)</p>
+                        <p>(jeu de Go : niveau 6kyu)</p>
                     </div>
                     <div id="spotify">musique préférée spotify</div>
                     <div id="lol">lol ranking</div>
