--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
     <main>
 
         <section id="about">
-            <img src="imgMe" alt="photo de moi (ou pas)" id="imgMe" />
+            <img src="" alt="Hé non! Tu veux voir ma tête ? Appelles-moi ;)" id="imgMe" />
+
             <div id='description'>
                 <h2>&Agrave; propos de moi</h2>
                 <p>
