--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section id="divTitle">
         <img src="src/fondClavier.jpg" alt="arrière-plan de clavier lumineux" id="imgProfil" />
         <div id="presentation">
-            <h1 id="me">Floris Louërat</h1>
+            <h1>Floris Louërat</h1>
             <p>développeur Web FullStack Junior</p>
         </div>
     </section>
@@ -73,9 +73,9 @@
         <section id="tools">
             <h2>Compétences</h2>
             <p>En constante évolution</p>
-            <div id="competencesDiv">
 
-            </div>
+            <div id="competencesDiv"></div>
+
             <div id="cvDiv">
                 <img src="src/cvImg.png" alt="cv de Floris" />
                 <a href="cv.pdf" download="cvFlorisLouërat.pdf">Télécharger le CV</a>
